# Videogame-Semantic-Search

./: .env.example  .gitattributes  .gitignore  README.md  format.ps1  main.py  pyproject.toml  render.yaml  setup.bat  start.ps1  vercel.json
backend/: config.py  main.py
backend/agents/: prompts.py  sparql_agent.py
backend/routers/: games.py  graph.py  query.py
backend/services/: graph_builder.py  image_cache.py  ontology_service.py
backend/utils/: result_formatter.py  sparql_validator.py
docs/: README.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AddGameForm.tsx  KnowledgeGraph.tsx  NodeContextMenu.tsx  NodeDetail.tsx  ResultList.tsx  SearchBar.tsx  SparqlViewer.tsx
frontend/src/hooks/: useQuery.ts
frontend/src/lib/: api.ts  queryCache.ts
frontend/src/types/: index.ts
ontology/: enrich_owl.py  populate_wikidata.py  prune_owl.py  prune_years.py  test_wikidata_fields.py  videogames.owl  videogames_pruned.owl  videogames_pruned_2015.owl  videogames_pruned_2020.owl  videogames_wikidata.owl
